--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,12 +1,11 @@
 <article class="li {{ .Type }}">
     <header class="post-header">
         <h3 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
+        <div class="post-image">
+          <img src="{{ .Params.pic }}" />
+        </div>
         <p class="post-time"><time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">{{ .Date.Format "January 2, 2006" }}</time></p>
     </header>
-
-    <section class="post-image">
-      <img src="{{ .Params.pic }}" />
-    </section>
     
     <section class="post-excerpt">
         <p>{{ .Summary }}</p>
