Change disqus showing rule

--- a/layouts/partials/disqus.html
+++ b/layouts/partials/disqus.html
@@ -2,7 +2,8 @@
         <section id="comments">
             <div id="disqus_thread" class="post-comments"></div>
             <script type="text/javascript">
-              if (window.location.hostname != "localhost") {
+              // Justin editing this to work with my develop/production setup (I still run production on localhost)
+              if (window.location.port != "1313") {
                 var disqus_shortname = '{{ . }}';
                 (function() {
                   var dsq = document.createElement('script');
