--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -16,18 +16,14 @@
     <hr>
 
     <footer class="post-footer">
-        <section class="f-1">
-            {{ if isset .Params "author" }}
-            <section class="author">
-                <p>Words by {{ index .Params "author" }}</p>
-            </section>
-            {{ else if isset .Site.Params "author" }}
-            <section class="author">
-                <p>Words by {{ index .Site.Params "author" }}</p>
-            </section>
-            {{ end }}
-            
+        <section>
             <p class="f-post-time"><time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "January 2, 2006" }}</time></p>
+        </section>
+        <section class="f-1">
+            <section class="author">
+                <p>About the author</p>
+                <p>{{ index .Site.Params "author" }} is a senior software engineer at Autodesk's BioNano research group.  In his free time he's building a user friendly diagramming app at <a href="http://www.popvex.com">popvex.com</a>.  Read more at the <a href="/about">about page</a>.</p>
+            </section>
         </section>
                         
         <section class="f-2">
