--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -19,13 +19,6 @@
         <section>
             <p class="f-post-time"><time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "January 2, 2006" }}</time></p>
         </section>
-        <section class="f-1">
-            <section class="author">
-                <p>About the author</p>
-                <p>{{ index .Site.Params "author" }} is a senior software engineer at Autodesk's BioNano research group.  In his free time he's building a user friendly diagramming app at <a href="http://www.popvex.com">popvex.com</a>.  Read more at the <a href="/about">about page</a>.</p>
-            </section>
-        </section>
-                        
         <section class="f-2">
             <section class="share">
                 <span>Share:
@@ -49,6 +42,20 @@
             	{{ delimit  . ", " }}
             	</span>
             {{ end }}
+        </section>
+
+        <section class="f-1">
+            <section class="author">
+                <p>About the author</p>
+                <img
+                  src="{{ $.Site.BaseURL }}images/author_thumb.jpg"
+                  class="author-thumb"
+                  alt="author"
+                />
+                <p>
+                I'm {{ index .Site.Params "author" }}, a software engineer with Autodesk's BioNano research group in San Francisco.  In my free time I'm working on building the most solid and straight forward way to create diagrams at <a href="http://www.popvex.com">popvex.com</a>.
+                </p>
+            </section>
         </section>
         {{ partial "disqus.html" . }}        
     </footer>
