Update work to Life Sciences

--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -53,7 +53,7 @@
                   alt="author"
                 />
                 <p>
-                I'm {{ index .Site.Params "author" }}, a software engineer with Autodesk's BioNano research group in San Francisco.  In my free time I'm working on building the most solid and straight forward way to create diagrams at <a href="http://www.popvex.com">popvex.com</a>.
+                I'm {{ index .Site.Params "author" }}, a software engineer with Autodesk's Life Sciences group in San Francisco.  In my free time I'm working on building the most solid and straight forward way to create diagrams at <a href="http://www.popvex.com">popvex.com</a>.
                 </p>
             </section>
         </section>
